@@ -1,5 +1,5 @@
 
-# This file was automatically generated by Dist::Zilla::Plugin::ModuleBuild v6.008.
+# This file was automatically generated by Dist::Zilla::Plugin::ModuleBuild v6.012.
 use strict;
 use warnings;
 
@@ -23,7 +23,7 @@ my %module_build_args = (
   "module_name" => "Catmandu::SRU",
   "recursive_test_files" => 1,
   "requires" => {
-    "Catmandu" => "1.000",
+    "Catmandu" => "1.20",
     "Catmandu::MODS" => "0.31",
     "Cpanel::JSON::XS" => "3.0213",
     "Furl" => "0.41",
@@ -36,6 +36,7 @@ my %module_build_args = (
   },
   "test_requires" => {
     "Test::Exception" => 0,
+    "Test::HTTP::LocalServer" => 0,
     "Test::More" => "1.001003",
     "Test::Pod" => 0,
     "Test::Simple" => "1.001003",
@@ -47,6 +48,7 @@ my %module_build_args = (
 my %fallback_build_requires = (
   "Module::Build" => "0.28",
   "Test::Exception" => 0,
+  "Test::HTTP::LocalServer" => 0,
   "Test::More" => "1.001003",
   "Test::Pod" => 0,
   "Test::Simple" => "1.001003",
